--- a/ranges-ts/full.html
+++ b/ranges-ts/full.html
@@ -5375,9 +5375,9 @@ Table <a href='ranges.requirements.general#tab:ranges.relations'>[tab:ranges.rel
 
   
   <b>Sized Range</b>  </td><td class='left'>               </td><td class='left'>                   </td></tr><tr ><td class='left'>
-                        </td><td class='left'> <span class='math'><span class='searrow'></span></span>    </td><td class='left'>                   </td></tr><tr ><td class='left'>
+                        </td><td class='left'> <span class='math'>&#x2198;</span>    </td><td class='left'>                   </td></tr><tr ><td class='left'>
                         </td><td class='left'>               </td><td class='left'>  <b>Range</b>   </td></tr><tr ><td class='left'>
-                        </td><td class='left'> <span class='math'><span class='nearrow'></span></span>    </td><td class='left'>                   </td></tr><tr ><td class='left'>
+                        </td><td class='left'> <span class='math'>&#x2197;</span>    </td><td class='left'>                   </td></tr><tr ><td class='left'>
   <b>View</b>         </td><td class='left'>               </td><td class='left'>                   </td></tr></table></div></div><div class='para' id='ranges.requirements.general-3'><div class='marginalizedparent'><a class='marginalized' href='#ranges.requirements.general-3'>3</a></div><p >The <span class='texttt'>Range</span> concept requires only that <span class='texttt'>begin</span> and <span class='texttt'>end</span>
 return an iterator and a sentinel. The <span class='texttt'>SizedRange</span> concept refines <span class='texttt'>Range</span>
 with the requirement that the number of elements in the range can be determined
