--- a/ranges-ts/tab.html
+++ b/ranges-ts/tab.html
@@ -117,9 +117,9 @@ complete or (possibly <i>cv</i>) <span class='texttt'>void</span>.</span> </td><
 
   
   <b>Sized Range</b>  </td><td class='left'>               </td><td class='left'>                   </td></tr><tr ><td class='left'>
-                        </td><td class='left'> <span class='math'><span class='searrow'></span></span>    </td><td class='left'>                   </td></tr><tr ><td class='left'>
+                        </td><td class='left'> <span class='math'>&#x2198;</span>    </td><td class='left'>                   </td></tr><tr ><td class='left'>
                         </td><td class='left'>               </td><td class='left'>  <b>Range</b>   </td></tr><tr ><td class='left'>
-                        </td><td class='left'> <span class='math'><span class='nearrow'></span></span>    </td><td class='left'>                   </td></tr><tr ><td class='left'>
+                        </td><td class='left'> <span class='math'>&#x2197;</span>    </td><td class='left'>                   </td></tr><tr ><td class='left'>
   <b>View</b>         </td><td class='left'>               </td><td class='left'>                   </td></tr></table></div><hr><h4 ><a class='secnum' style='min-width:88pt'>10.1</a> General <a class='abbr_ref' href='algorithms.general#tab:algorithms.summary'>[algorithms.general]</a></h4><div class='numberedTable' id='algorithms.summary'>Table <a href='#algorithms.summary'>11</a> — Algorithms library summary<br><table ><tr class='rowsep'><td colspan='2' class='center'><b>Subclause</b></td><td class='left'>	<b>Header(s)</b>	</td></tr><tr class='capsep'><td class='left'> 
 
 
