Update Ranges TS

--- a/ranges-ts/alg.sorting.html
+++ b/ranges-ts/alg.sorting.html
@@ -848,7 +848,7 @@ is lexicographically less than the sequence of elements defined by the range
 otherwise.</p></div></div><div class='para' id='alg.lex.comparison-2'><div class='marginalizedparent'><a class='marginalized' href='#alg.lex.comparison-2'>2</a></div><div class='itemdescr'><p ><i>Complexity:</i>
 At most
 <span class='texttt'>2*min((last1 - first1), (last2 - first2))</span>
-applications of the corresponding comparison and projection.</p></div></div><div class='para' id='alg.lex.comparison-3'><div class='marginalizedparent'><a class='marginalized' href='#alg.lex.comparison-3'>3</a></div><div class='itemdescr'><p ><i>Remarks:</i>
+applications of the corresponding comparison and projections.</p></div></div><div class='para' id='alg.lex.comparison-3'><div class='marginalizedparent'><a class='marginalized' href='#alg.lex.comparison-3'>3</a></div><div class='itemdescr'><p ><i>Remarks:</i>
 If two sequences have the same number of elements and their corresponding
 elements are equivalent, then neither sequence is lexicographically
 less than the other.
