--- a/ranges-ts/indirectcallable.html
+++ b/ranges-ts/indirectcallable.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html><html lang='en'><head><title>[indirectcallable]</title><meta charset='UTF-8'/><link rel='stylesheet' type='text/css' href='14882.css'/></head><body><div class='wrapper'><h1 ><a class='secnum' style='min-width:73pt'>9</a> Iterators library <a class='abbr_ref' href='./#iterators'>[iterators]</a></h1><div id='indirectcallable'><h2 ><a class='secnum' style='min-width:88pt'>9.4</a> Indirect callable requirements <a class='abbr_ref'>[indirectcallable]</a></h2><div id='general'><h3 ><a class='secnum' href='#general' style='min-width:103pt'>9.4.1</a> In general <a class='abbr_ref' href='indirectcallable.general'>[indirectcallable.general]</a></h3><div class='para' id='general-1'><div class='marginalizedparent'><a class='marginalized' href='#general-1'>1</a></div><p >There are several concepts that group requirements of algorithms that take callable
 objects (  ISO/IEC 14882:2014 &sect;<a href='../n4140/func.require'>[func.require]</a>) as arguments.</p></div></div><div id='indirectinvocable'><h3 ><a class='secnum' href='#indirectinvocable' style='min-width:103pt'>9.4.2</a> Indirect callables <a class='abbr_ref' href='indirectcallable.indirectinvocable'>[indirectcallable.indirectinvocable]</a></h3><div class='para' id='indirectinvocable-1'><div class='marginalizedparent'><a class='marginalized' href='#indirectinvocable-1'>1</a></div><p >The indirect callable concepts are used to constrain those algorithms that accept
-callable objects (  ISO/IEC 14882:2014 &sect;<a href='../n4140/func.def'>[func.def]</a>) as arguments.</p><p ><span class='indexparent'><a class='index' id='IndirectInvocable'></a></span><span class='indexparent'><a class='index' id='IndirectRegularInvocable'></a></span><span class='indexparent'><a class='index' id='IndirectPredicate'></a></span><span class='indexparent'><a class='index' id='IndirectRelation'></a></span><span class='indexparent'><a class='index' id='IndirectStrictWeakOrder'></a></span></p><pre class='codeblock'>
+callable objects (  ISO/IEC 14882:2014 &sect;<a href='../n4140/func.def'>[func.def]</a>) as arguments.</p><p ><span class='indexparent'><a class='index' id='indirect_result_of'></a></span><span class='indexparent'><a class='index' id='IndirectInvocable'></a></span><span class='indexparent'><a class='index' id='IndirectRegularInvocable'></a></span><span class='indexparent'><a class='index' id='IndirectPredicate'></a></span><span class='indexparent'><a class='index' id='IndirectRelation'></a></span><span class='indexparent'><a class='index' id='IndirectStrictWeakOrder'></a></span></p><pre class='codeblock'>
   template &lt;class F&gt;
   concept bool IndirectInvocable() {
     return CopyConstructible&lt;F&gt;() &amp;&amp;
@@ -89,6 +89,13 @@ callable objects (  ISO/IEC 14882:2014 &sect;<a href='../n4140/func.def'>[func.d
       StrictWeakOrder&lt;F&amp;, reference_t&lt;I1&gt;, reference_t&lt;I2&gt;&gt;() &amp;&amp;
       StrictWeakOrder&lt;F&amp;, iter_common_reference_t&lt;I1&gt;, iter_common_reference_t&lt;I2&gt;&gt;();
   }
+
+  template &lt;class&gt; struct indirect_result_of { };
+
+  template &lt;class F, class... Is&gt;
+    requires IndirectInvocable&lt;decay_t&lt;F&gt;, Is...&gt;()
+  struct indirect_result_of&lt;F(Is...)&gt; :
+    result_of&lt;F(reference_t&lt;Is&gt;...)&gt; { };
 </pre></div></div><div id='projected'><h3 ><a class='secnum' href='#projected' style='min-width:103pt'>9.4.3</a> Class template <span class='texttt'>projected</span> <a class='abbr_ref' href='projected'>[projected]</a></h3><div class='para' id='projected-1'><div class='marginalizedparent'><a class='marginalized' href='#projected-1'>1</a></div><p >The <span class='texttt'>projected</span> class template is intended for use when specifying the constraints of
 algorithms that accept callable objects and projections (<a href='defns.projection'>[defns.projection]</a>). It bundles a <span class='texttt'>Readable</span> type
 <span class='texttt'>I</span> and a function <span class='texttt'>Proj</span> into a new <span class='texttt'>Readable</span> type whose
