--- a/ranges-ts/iterator.synopsis.html
+++ b/ranges-ts/iterator.synopsis.html
@@ -582,12 +582,12 @@ namespace std { namespace experimental { namespace ranges { inline namespace v1 
 
 namespace std {
   <span class='comment'>// <a href='iterator.stdtraits'>[iterator.stdtraits]</a>, iterator traits:
-</span>  template &lt;experimental::ranges::Iterator I&gt;
-    struct iterator_traits;
-  template &lt;experimental::ranges::InputIterator I&gt;
-    struct iterator_traits;
-  template &lt;experimental::ranges::InputIterator I&gt;
-      requires experimental::ranges::Sentinel&lt;I, I&gt;()
+</span>  template &lt;experimental::ranges::Iterator Out&gt;
+    struct iterator_traits&lt;Out&gt;;
+  template &lt;experimental::ranges::InputIterator In&gt;
+    struct iterator_traits&lt;In&gt;;
+  template &lt;experimental::ranges::InputIterator In&gt;
+      requires experimental::ranges::Sentinel&lt;In, In&gt;()
     struct iterator_traits;
 }
 </pre><div class='para' id='1'><div class='marginalizedparent'><a class='marginalized' href='#1'>1</a></div><p >Any entities declared or defined in namespace <span class='texttt'>std</span> in header <span class='texttt'>&lt;iterator&gt;</span>
