--- a/ranges-ts/ranges.html
+++ b/ranges-ts/ranges.html
@@ -144,7 +144,7 @@ to derive from <span class='texttt'>true_type</span> or <span class='texttt'>fal
 implies reference semantics. <i>&nbsp;—&nbsp;end note</i>&nbsp;]
 </p></li><li id='view-4.5'><div class='marginalizedparent' style='left:-7em'><a class='marginalized' href='#view-4.5'>(4.5)</a></div><p >Otherwise, <span class='texttt'>true</span>.
 </p></li></ul></div></div></div><div id='bounded'><h4 ><a class='secnum' href='#bounded' style='min-width:118pt'>9.9.2.5</a> Bounded ranges <a class='abbr_ref' href='ranges.bounded'>[ranges.bounded]</a></h4><div class='para' id='bounded-1'><div class='marginalizedparent'><a class='marginalized' href='#bounded-1'>1</a></div><p >The <span class='texttt'>BoundedRange</span> concept specifies requirements
-of an <span class='texttt'>Range</span> type for which <span class='texttt'>begin</span> and <span class='texttt'>end</span> return objects of
+of a <span class='texttt'>Range</span> type for which <span class='texttt'>begin</span> and <span class='texttt'>end</span> return objects of
 the same type. [&nbsp;<i>Note:</i> The standard containers (  ISO/IEC 14882:2014 &sect;<a href='../n4140/containers'>[containers]</a>)
 satisfy <span class='texttt'>BoundedRange</span>.<i>&nbsp;—&nbsp;end note</i>&nbsp;]</p><pre class='codeblock'>
 template &lt;class T&gt;
