--- a/ranges-ts/alg.foreach.html
+++ b/ranges-ts/alg.foreach.html
@@ -25,5 +25,8 @@ Applies <span class='texttt'>f</span> and <span class='texttt'>proj</span>
 exactly
 <span class='texttt'>last - first</span>
 times.</p></div></div><div class='para' id='4'><div class='marginalizedparent'><a class='marginalized' href='#4'>4</a></div><div class='itemdescr'><p ><i>Remarks:</i>
-If <span class='texttt'>f</span> returns a result, the result is ignored.
+If <span class='texttt'>f</span> returns a result, the result is ignored.</p></div></div><div class='para' id='5'><div class='marginalizedparent'><a class='marginalized' href='#5'>5</a></div><div class='itemdescr'><p >[&nbsp;<i>Note:</i> The requirements of this algorithm are more strict than those
+specified in   ISO/IEC 14882:2014 &sect;<a href='../n4140/alg.foreach'>[alg.foreach]</a>. This algorithm requires <span class='texttt'>Fun</span> to
+satisfy <span class='texttt'>CopyConstructible</span>, whereas the algorithm in the C++ Standard
+requires only <span class='texttt'>MoveConstructible</span>. <i>&nbsp;—&nbsp;end note</i>&nbsp;]
 </p></div></div></div></div></body></html>
