--- a/ranges-ts/alg.nonmodifying.html
+++ b/ranges-ts/alg.nonmodifying.html
@@ -67,7 +67,10 @@ Applies <span class='texttt'>f</span> and <span class='texttt'>proj</span>
 exactly
 <span class='texttt'>last - first</span>
 times.</p></div></div><div class='para' id='alg.foreach-4'><div class='marginalizedparent'><a class='marginalized' href='#alg.foreach-4'>4</a></div><div class='itemdescr'><p ><i>Remarks:</i>
-If <span class='texttt'>f</span> returns a result, the result is ignored.
+If <span class='texttt'>f</span> returns a result, the result is ignored.</p></div></div><div class='para' id='alg.foreach-5'><div class='marginalizedparent'><a class='marginalized' href='#alg.foreach-5'>5</a></div><div class='itemdescr'><p >[&nbsp;<i>Note:</i> The requirements of this algorithm are more strict than those
+specified in   ISO/IEC 14882:2014 &sect;<a href='../n4140/alg.foreach'>[alg.foreach]</a>. This algorithm requires <span class='texttt'>Fun</span> to
+satisfy <span class='texttt'>CopyConstructible</span>, whereas the algorithm in the C++ Standard
+requires only <span class='texttt'>MoveConstructible</span>. <i>&nbsp;—&nbsp;end note</i>&nbsp;]
 </p></div></div></div><div id='alg.find'><h3 ><a class='secnum' href='#alg.find' style='min-width:103pt'>10.3.5</a> Find <a class='abbr_ref' href='alg.find'>[alg.find]</a></h3><p ><span class='indexparent'><a class='index' id='find'></a></span><span class='indexparent'><a class='index' id='find_if'></a></span><span class='indexparent'><a class='index' id='find_if_not'></a></span><code class='itemdecl'>
 template &lt;InputIterator I, Sentinel&lt;I&gt; S, class T, class Proj = identity&gt;
   requires IndirectRelation&lt;equal_to&lt;&gt;, projected&lt;I, Proj&gt;, const T*&gt;()
