--- a/ranges-ts/algorithms.html
+++ b/ranges-ts/algorithms.html
@@ -1138,7 +1138,10 @@ Applies <span class='texttt'>f</span> and <span class='texttt'>proj</span>
 exactly
 <span class='texttt'>last - first</span>
 times.</p></div></div><div class='para' id='alg.foreach-4'><div class='marginalizedparent'><a class='marginalized' href='#alg.foreach-4'>4</a></div><div class='itemdescr'><p ><i>Remarks:</i>
-If <span class='texttt'>f</span> returns a result, the result is ignored.
+If <span class='texttt'>f</span> returns a result, the result is ignored.</p></div></div><div class='para' id='alg.foreach-5'><div class='marginalizedparent'><a class='marginalized' href='#alg.foreach-5'>5</a></div><div class='itemdescr'><p >[&nbsp;<i>Note:</i> The requirements of this algorithm are more strict than those
+specified in   ISO/IEC 14882:2014 &sect;<a href='../n4140/alg.foreach'>[alg.foreach]</a>. This algorithm requires <span class='texttt'>Fun</span> to
+satisfy <span class='texttt'>CopyConstructible</span>, whereas the algorithm in the C++ Standard
+requires only <span class='texttt'>MoveConstructible</span>. <i>&nbsp;—&nbsp;end note</i>&nbsp;]
 </p></div></div></div><div id='alg.find'><h3 ><a class='secnum' href='#alg.find' style='min-width:103pt'>10.3.5</a> Find <a class='abbr_ref' href='alg.find'>[alg.find]</a></h3><p ><span class='indexparent'><a class='index' id='find'></a></span><span class='indexparent'><a class='index' id='find_if'></a></span><span class='indexparent'><a class='index' id='find_if_not'></a></span><code class='itemdecl'>
 template &lt;InputIterator I, Sentinel&lt;I&gt; S, class T, class Proj = identity&gt;
   requires IndirectRelation&lt;equal_to&lt;&gt;, projected&lt;I, Proj&gt;, const T*&gt;()
@@ -2171,7 +2174,7 @@ template &lt;ForwardRange Rng, class Proj = identity,
 there shall be an iterator <span class='texttt'>mid</span> such that
 <span class='texttt'>all_of(first, mid, pred, proj)</span> and <span class='texttt'>none_of(mid, last, pred, proj)</span>
 are both true.</p></div></div><div class='para' id='alg.partitions-14'><div class='marginalizedparent'><a class='marginalized' href='#alg.partitions-14'>14</a></div><div class='itemdescr'><p ><i>Returns:</i> An iterator <span class='texttt'>mid</span> such that <span class='texttt'>all_of(first, mid, pred, proj)</span> and
-<span class='texttt'>none_of(mid, last, pred, proj)</span> are both true.</p></div></div><div class='para' id='alg.partitions-15'><div class='marginalizedparent'><a class='marginalized' href='#alg.partitions-15'>15</a></div><div class='itemdescr'><p ><i>Complexity:</i> <span class='math'>Ο(<span class='math'><span class='mathalpha'>log</span>(<span class='mathalpha'>last</span> - <span class='mathalpha'>first</span>)</span>)</span> applications of <span class='texttt'>pred</span> and <span class='texttt'>proj</span>.
+<span class='texttt'>none_of(mid, last, pred, proj)</span> are both true.</p></div></div><div class='para' id='alg.partitions-15'><div class='marginalizedparent'><a class='marginalized' href='#alg.partitions-15'>15</a></div><div class='itemdescr'><p ><i>Complexity:</i> <span class='math'>Ο(<span class='math'><span class="mathrm">log</span>(<span class='texttt'>last - first</span>)</span>)</span> applications of <span class='texttt'>pred</span> and <span class='texttt'>proj</span>.
 </p></div></div></div></div><div id='alg.sorting'><h2 ><a class='secnum' href='#alg.sorting' style='min-width:88pt'>10.5</a> Sorting and related operations <a class='abbr_ref' href='alg.sorting'>[alg.sorting]</a></h2><div class='para' id='alg.sorting-1'><div class='marginalizedparent'><a class='marginalized' href='#alg.sorting-1'>1</a></div><p >All the operations in <a href='alg.sorting'>[alg.sorting]</a> take an optional binary callable predicate of type <span class='texttt'>Comp</span> that defaults to <span class='texttt'>less&lt;&gt;</span>.</p></div><div class='para' id='alg.sorting-2'><div class='marginalizedparent'><a class='marginalized' href='#alg.sorting-2'>2</a></div><p ><span class='texttt'>Comp</span>
 is a callable object (  ISO/IEC 14882:2014 &sect;<a href='../n4140/func.require'>[func.require]</a>). The return value of the <span class='texttt'>invoke</span> operation applied to
 an object of type <span class='texttt'>Comp</span>, when contextually converted to
@@ -3022,7 +3025,7 @@ is lexicographically less than the sequence of elements defined by the range
 otherwise.</p></div></div><div class='para' id='alg.lex.comparison-2'><div class='marginalizedparent'><a class='marginalized' href='#alg.lex.comparison-2'>2</a></div><div class='itemdescr'><p ><i>Complexity:</i>
 At most
 <span class='texttt'>2*min((last1 - first1), (last2 - first2))</span>
-applications of the corresponding comparison and projection.</p></div></div><div class='para' id='alg.lex.comparison-3'><div class='marginalizedparent'><a class='marginalized' href='#alg.lex.comparison-3'>3</a></div><div class='itemdescr'><p ><i>Remarks:</i>
+applications of the corresponding comparison and projections.</p></div></div><div class='para' id='alg.lex.comparison-3'><div class='marginalizedparent'><a class='marginalized' href='#alg.lex.comparison-3'>3</a></div><div class='itemdescr'><p ><i>Remarks:</i>
 If two sequences have the same number of elements and their corresponding
 elements are equivalent, then neither sequence is lexicographically
 less than the other.
