--- a/ranges-ts/full.html
+++ b/ranges-ts/full.html
@@ -37,15 +37,15 @@ the new iterator range requirements (<a href='iterator.range'>[iterator.range]</
 </p></li></ul></div><div class='para' id='intro.scope-3'><div class='marginalizedparent'><a class='marginalized' href='#intro.scope-3'>3</a></div><p >This document does not specify constrained analogues of other parts of the Standard
 Library (e.g., the numeric algorithms), nor does it add range support to all the
 places that could benefit from it (e.g., the containers).</p></div><div class='para' id='intro.scope-4'><div class='marginalizedparent'><a class='marginalized' href='#intro.scope-4'>4</a></div><p >This document does not specify any new range views, actions, or facade or adaptor
-utilities; all are left as future work.</p></div></div><div id='intro.refs'><h1 ><a class='secnum' href='#intro.refs' style='min-width:73pt'>2</a> References <a class='abbr_ref' href='./#intro.refs'>[intro.refs]</a></h1><div class='para' id='intro.refs-1'><div class='marginalizedparent'><a class='marginalized' href='#intro.refs-1'>1</a></div><p >The following referenced documents are indispensable for the
-application of this document. For dated references, only the
-edition cited applies. For undated references, the latest edition
-of the referenced document (including any amendments) applies.</p><ul class='itemize'><li id='intro.refs-1.1'><div class='marginalizedparent' style='left:-7em'><a class='marginalized' href='#intro.refs-1.1'>(1.1)</a></div><p >ISO/IEC 14882:2014, <i>Programming Languages - C++</i>
+utilities; all are left as future work.</p></div></div><div id='intro.refs'><h1 ><a class='secnum' href='#intro.refs' style='min-width:73pt'>2</a> References <a class='abbr_ref' href='./#intro.refs'>[intro.refs]</a></h1><div class='para' id='intro.refs-1'><div class='marginalizedparent'><a class='marginalized' href='#intro.refs-1'>1</a></div><p >The following documents are referred to in the text in such a way that some or
+all of their content constitutes requirements of this document. For dated
+references, only the edition cited applies. For undated references, the latest
+edition of the referenced document (including any amendments) applies.</p><ul class='itemize'><li id='intro.refs-1.1'><div class='marginalizedparent' style='left:-7em'><a class='marginalized' href='#intro.refs-1.1'>(1.1)</a></div><p >ISO/IEC 14882:2014, <i>Programming Languages - C++</i>
 </p></li><li id='intro.refs-1.2'><div class='marginalizedparent' style='left:-7em'><a class='marginalized' href='#intro.refs-1.2'>(1.2)</a></div><p >ISO/IEC TS 19217:2015, <i>Programming Languages - C++ Extensions for Concepts</i>
 </p></li><li id='intro.refs-1.3'><div class='marginalizedparent' style='left:-7em'><a class='marginalized' href='#intro.refs-1.3'>(1.3)</a></div><p >JTC1/SC22/WG21 N4128, <i>Ranges for the Standard Library, Revision 1</i>
 </p></li><li id='intro.refs-1.4'><div class='marginalizedparent' style='left:-7em'><a class='marginalized' href='#intro.refs-1.4'>(1.4)</a></div><p >JTC1/SC22/WG21 N3351, <i>A Concept Design for the STL</i>
 </p></li></ul><p >ISO/IEC 14882:2014 is herein called the <a class='hidden_link' href='#def:C++_Standard' id='def:C++_Standard'><i>C++ Standard</i></a>, N3351 is called the
-<a class='hidden_link' href='#def:“The_Palo_Alto”' id='def:“The_Palo_Alto”'><i>“The Palo Alto”</i></a> report, and ISO/IEC TS 19217:2015 is called the <a class='hidden_link' href='#def:Concepts_TS' id='def:Concepts_TS'><i>Concepts TS</i></a>.</p></div></div><div id='intro.defs'><h1 ><a class='secnum' href='#intro.defs' style='min-width:73pt'>3</a> Terms and Definitions <a class='abbr_ref' href='./#intro.defs'>[intro.defs]</a></h1><div class='para' id='intro.defs-1'><div class='marginalizedparent'><a class='marginalized' href='#intro.defs-1'>1</a></div><p >Terms defined in   ISO/IEC 14882:2014 &sect;<a href='../n4140/definitions'>[definitions]</a> are used in this document with the same
+<a class='hidden_link' href='#def:“The_Palo_Alto”' id='def:“The_Palo_Alto”'><i>“The Palo Alto”</i></a> report, and ISO/IEC TS 19217:2015 is called the <a class='hidden_link' href='#def:Concepts_TS' id='def:Concepts_TS'><i>Concepts TS</i></a>.</p></div></div><div id='intro.defs'><h1 ><a class='secnum' href='#intro.defs' style='min-width:73pt'>3</a> Terms and definitions <a class='abbr_ref' href='./#intro.defs'>[intro.defs]</a></h1><div class='para' id='intro.defs-1'><div class='marginalizedparent'><a class='marginalized' href='#intro.defs-1'>1</a></div><p >Terms defined in   ISO/IEC 14882:2014 &sect;<a href='../n4140/definitions'>[definitions]</a> are used in this document with the same
 meaning.</p><p ><span class='indexparent'><a class='index' id='projection'></a></span></p></div><div id='defns.projection'><h2 ><a class='secnum' href='#defns.projection' style='min-width:88pt'>3.1</a> projection <a class='abbr_ref' href='defns.projection'>[defns.projection]</a></h2><p >&langle;function object argument&rangle; used by an algorithm to examine the
 values of elements. This enables algorithms to behave based on the projected
 values rather than the actual element values.</p><p >[&nbsp;<i>Example:</i>
@@ -54,7 +54,7 @@ std::pair&lt;int, const char*&gt; pairs[] = {{2, "foo"}, {1, "bar"}, {0, "baz"}}
 ranges::sort(pairs, std::less&lt;&gt;{}, [](auto const&amp; p) { return p.first; });
 </pre><p >sorts the pairs in increasing order of their <span class='texttt'>first</span> members:
 </p><pre class='codeblock'>
-</pre><p ><i>&nbsp;—&nbsp;end example</i>&nbsp;]</p></div></div><div id='intro'><h1 ><a class='secnum' href='#intro' style='min-width:73pt'>4</a> General Principles <a class='abbr_ref' href='./#intro'>[intro]</a></h1><div id='intro.compliance'><h2 ><a class='secnum' href='#intro.compliance' style='min-width:88pt'>4.1</a> Implementation compliance <a class='abbr_ref' href='intro.compliance'>[intro.compliance]</a></h2><div class='para' id='intro.compliance-1'><div class='marginalizedparent'><a class='marginalized' href='#intro.compliance-1'>1</a></div><p >Conformance requirements for this specification are the same as those
+</pre><p ><i>&nbsp;—&nbsp;end example</i>&nbsp;]</p></div></div><div id='intro'><h1 ><a class='secnum' href='#intro' style='min-width:73pt'>4</a> General principles <a class='abbr_ref' href='./#intro'>[intro]</a></h1><div id='intro.compliance'><h2 ><a class='secnum' href='#intro.compliance' style='min-width:88pt'>4.1</a> Implementation compliance <a class='abbr_ref' href='intro.compliance'>[intro.compliance]</a></h2><div class='para' id='intro.compliance-1'><div class='marginalizedparent'><a class='marginalized' href='#intro.compliance-1'>1</a></div><p >Conformance requirements for this specification are the same as those
 defined in   ISO/IEC 14882:2014 &sect;<a href='../n4140/intro.compliance'>[intro.compliance]</a>.
 [&nbsp;<i>Note:</i>
 Conformance is defined in terms of the behavior of programs.
@@ -2394,12 +2394,12 @@ namespace std { namespace experimental { namespace ranges { inline namespace v1 
 
 namespace std {
   <span class='comment'>// <a href='iterator.stdtraits'>[iterator.stdtraits]</a>, iterator traits:
-</span>  template &lt;experimental::ranges::Iterator I&gt;
-    struct iterator_traits;
-  template &lt;experimental::ranges::InputIterator I&gt;
-    struct iterator_traits;
-  template &lt;experimental::ranges::InputIterator I&gt;
-      requires experimental::ranges::Sentinel&lt;I, I&gt;()
+</span>  template &lt;experimental::ranges::Iterator Out&gt;
+    struct iterator_traits&lt;Out&gt;;
+  template &lt;experimental::ranges::InputIterator In&gt;
+    struct iterator_traits&lt;In&gt;;
+  template &lt;experimental::ranges::InputIterator In&gt;
+      requires experimental::ranges::Sentinel&lt;In, In&gt;()
     struct iterator_traits;
 }
 </pre><div class='para' id='iterator.synopsis-1'><div class='marginalizedparent'><a class='marginalized' href='#iterator.synopsis-1'>1</a></div><p >Any entities declared or defined in namespace <span class='texttt'>std</span> in header <span class='texttt'>&lt;iterator&gt;</span>
@@ -2953,7 +2953,7 @@ from <span class='texttt'>a</span>. Let <span class='texttt'>n</span> be the sma
 </p></li><li id='iterators.random.access-2.11'><div class='marginalizedparent' style='left:-7em'><a class='marginalized' href='#iterators.random.access-2.11'>(2.11)</a></div><p >If <span class='texttt'>b</span> is dereferenceable, then <span class='texttt'>a[n]</span> is valid and is equal to <span class='texttt'>*b</span>.
 </p></li></ul></div></div></div><div id='indirectcallable'><h2 ><a class='secnum' href='#indirectcallable' style='min-width:88pt'>9.4</a> Indirect callable requirements <a class='abbr_ref' href='indirectcallable'>[indirectcallable]</a></h2><div id='indirectcallable.general'><h3 ><a class='secnum' href='#indirectcallable.general' style='min-width:103pt'>9.4.1</a> In general <a class='abbr_ref' href='indirectcallable.general'>[indirectcallable.general]</a></h3><div class='para' id='indirectcallable.general-1'><div class='marginalizedparent'><a class='marginalized' href='#indirectcallable.general-1'>1</a></div><p >There are several concepts that group requirements of algorithms that take callable
 objects (  ISO/IEC 14882:2014 &sect;<a href='../n4140/func.require'>[func.require]</a>) as arguments.</p></div></div><div id='indirectcallable.indirectinvocable'><h3 ><a class='secnum' href='#indirectcallable.indirectinvocable' style='min-width:103pt'>9.4.2</a> Indirect callables <a class='abbr_ref' href='indirectcallable.indirectinvocable'>[indirectcallable.indirectinvocable]</a></h3><div class='para' id='indirectcallable.indirectinvocable-1'><div class='marginalizedparent'><a class='marginalized' href='#indirectcallable.indirectinvocable-1'>1</a></div><p >The indirect callable concepts are used to constrain those algorithms that accept
-callable objects (  ISO/IEC 14882:2014 &sect;<a href='../n4140/func.def'>[func.def]</a>) as arguments.</p><p ><span class='indexparent'><a class='index' id='IndirectInvocable'></a></span><span class='indexparent'><a class='index' id='IndirectRegularInvocable'></a></span><span class='indexparent'><a class='index' id='IndirectPredicate'></a></span><span class='indexparent'><a class='index' id='IndirectRelation'></a></span><span class='indexparent'><a class='index' id='IndirectStrictWeakOrder'></a></span></p><pre class='codeblock'>
+callable objects (  ISO/IEC 14882:2014 &sect;<a href='../n4140/func.def'>[func.def]</a>) as arguments.</p><p ><span class='indexparent'><a class='index' id='indirect_result_of'></a></span><span class='indexparent'><a class='index' id='IndirectInvocable'></a></span><span class='indexparent'><a class='index' id='IndirectRegularInvocable'></a></span><span class='indexparent'><a class='index' id='IndirectPredicate'></a></span><span class='indexparent'><a class='index' id='IndirectRelation'></a></span><span class='indexparent'><a class='index' id='IndirectStrictWeakOrder'></a></span></p><pre class='codeblock'>
   template &lt;class F&gt;
   concept bool IndirectInvocable() {
     return CopyConstructible&lt;F&gt;() &amp;&amp;
@@ -3042,6 +3042,13 @@ callable objects (  ISO/IEC 14882:2014 &sect;<a href='../n4140/func.def'>[func.d
       StrictWeakOrder&lt;F&amp;, reference_t&lt;I1&gt;, reference_t&lt;I2&gt;&gt;() &amp;&amp;
       StrictWeakOrder&lt;F&amp;, iter_common_reference_t&lt;I1&gt;, iter_common_reference_t&lt;I2&gt;&gt;();
   }
+
+  template &lt;class&gt; struct indirect_result_of { };
+
+  template &lt;class F, class... Is&gt;
+    requires IndirectInvocable&lt;decay_t&lt;F&gt;, Is...&gt;()
+  struct indirect_result_of&lt;F(Is...)&gt; :
+    result_of&lt;F(reference_t&lt;Is&gt;...)&gt; { };
 </pre></div></div><div id='projected'><h3 ><a class='secnum' href='#projected' style='min-width:103pt'>9.4.3</a> Class template <span class='texttt'>projected</span> <a class='abbr_ref' href='projected'>[projected]</a></h3><div class='para' id='projected-1'><div class='marginalizedparent'><a class='marginalized' href='#projected-1'>1</a></div><p >The <span class='texttt'>projected</span> class template is intended for use when specifying the constraints of
 algorithms that accept callable objects and projections (<a href='defns.projection'>[defns.projection]</a>). It bundles a <span class='texttt'>Readable</span> type
 <span class='texttt'>I</span> and a function <span class='texttt'>Proj</span> into a new <span class='texttt'>Readable</span> type whose
@@ -5495,7 +5502,7 @@ to derive from <span class='texttt'>true_type</span> or <span class='texttt'>fal
 implies reference semantics. <i>&nbsp;—&nbsp;end note</i>&nbsp;]
 </p></li><li id='ranges.view-4.5'><div class='marginalizedparent' style='left:-7em'><a class='marginalized' href='#ranges.view-4.5'>(4.5)</a></div><p >Otherwise, <span class='texttt'>true</span>.
 </p></li></ul></div></div></div><div id='ranges.bounded'><h4 ><a class='secnum' href='#ranges.bounded' style='min-width:118pt'>9.9.2.5</a> Bounded ranges <a class='abbr_ref' href='ranges.bounded'>[ranges.bounded]</a></h4><div class='para' id='ranges.bounded-1'><div class='marginalizedparent'><a class='marginalized' href='#ranges.bounded-1'>1</a></div><p >The <span class='texttt'>BoundedRange</span> concept specifies requirements
-of an <span class='texttt'>Range</span> type for which <span class='texttt'>begin</span> and <span class='texttt'>end</span> return objects of
+of a <span class='texttt'>Range</span> type for which <span class='texttt'>begin</span> and <span class='texttt'>end</span> return objects of
 the same type. [&nbsp;<i>Note:</i> The standard containers (  ISO/IEC 14882:2014 &sect;<a href='../n4140/containers'>[containers]</a>)
 satisfy <span class='texttt'>BoundedRange</span>.<i>&nbsp;—&nbsp;end note</i>&nbsp;]</p><pre class='codeblock'>
 template &lt;class T&gt;
@@ -6830,7 +6837,10 @@ Applies <span class='texttt'>f</span> and <span class='texttt'>proj</span>
 exactly
 <span class='texttt'>last - first</span>
 times.</p></div></div><div class='para' id='alg.foreach-4'><div class='marginalizedparent'><a class='marginalized' href='#alg.foreach-4'>4</a></div><div class='itemdescr'><p ><i>Remarks:</i>
-If <span class='texttt'>f</span> returns a result, the result is ignored.
+If <span class='texttt'>f</span> returns a result, the result is ignored.</p></div></div><div class='para' id='alg.foreach-5'><div class='marginalizedparent'><a class='marginalized' href='#alg.foreach-5'>5</a></div><div class='itemdescr'><p >[&nbsp;<i>Note:</i> The requirements of this algorithm are more strict than those
+specified in   ISO/IEC 14882:2014 &sect;<a href='../n4140/alg.foreach'>[alg.foreach]</a>. This algorithm requires <span class='texttt'>Fun</span> to
+satisfy <span class='texttt'>CopyConstructible</span>, whereas the algorithm in the C++ Standard
+requires only <span class='texttt'>MoveConstructible</span>. <i>&nbsp;—&nbsp;end note</i>&nbsp;]
 </p></div></div></div><div id='alg.find'><h3 ><a class='secnum' href='#alg.find' style='min-width:103pt'>10.3.5</a> Find <a class='abbr_ref' href='alg.find'>[alg.find]</a></h3><p ><span class='indexparent'><a class='index' id='find'></a></span><span class='indexparent'><a class='index' id='find_if'></a></span><span class='indexparent'><a class='index' id='find_if_not'></a></span><code class='itemdecl'>
 template &lt;InputIterator I, Sentinel&lt;I&gt; S, class T, class Proj = identity&gt;
   requires IndirectRelation&lt;equal_to&lt;&gt;, projected&lt;I, Proj&gt;, const T*&gt;()
@@ -7863,7 +7873,7 @@ template &lt;ForwardRange Rng, class Proj = identity,
 there shall be an iterator <span class='texttt'>mid</span> such that
 <span class='texttt'>all_of(first, mid, pred, proj)</span> and <span class='texttt'>none_of(mid, last, pred, proj)</span>
 are both true.</p></div></div><div class='para' id='alg.partitions-14'><div class='marginalizedparent'><a class='marginalized' href='#alg.partitions-14'>14</a></div><div class='itemdescr'><p ><i>Returns:</i> An iterator <span class='texttt'>mid</span> such that <span class='texttt'>all_of(first, mid, pred, proj)</span> and
-<span class='texttt'>none_of(mid, last, pred, proj)</span> are both true.</p></div></div><div class='para' id='alg.partitions-15'><div class='marginalizedparent'><a class='marginalized' href='#alg.partitions-15'>15</a></div><div class='itemdescr'><p ><i>Complexity:</i> <span class='math'>Ο(<span class='math'><span class='mathalpha'>log</span>(<span class='mathalpha'>last</span> - <span class='mathalpha'>first</span>)</span>)</span> applications of <span class='texttt'>pred</span> and <span class='texttt'>proj</span>.
+<span class='texttt'>none_of(mid, last, pred, proj)</span> are both true.</p></div></div><div class='para' id='alg.partitions-15'><div class='marginalizedparent'><a class='marginalized' href='#alg.partitions-15'>15</a></div><div class='itemdescr'><p ><i>Complexity:</i> <span class='math'>Ο(<span class='math'><span class="mathrm">log</span>(<span class='texttt'>last - first</span>)</span>)</span> applications of <span class='texttt'>pred</span> and <span class='texttt'>proj</span>.
 </p></div></div></div></div><div id='alg.sorting'><h2 ><a class='secnum' href='#alg.sorting' style='min-width:88pt'>10.5</a> Sorting and related operations <a class='abbr_ref' href='alg.sorting'>[alg.sorting]</a></h2><div class='para' id='alg.sorting-1'><div class='marginalizedparent'><a class='marginalized' href='#alg.sorting-1'>1</a></div><p >All the operations in <a href='alg.sorting'>[alg.sorting]</a> take an optional binary callable predicate of type <span class='texttt'>Comp</span> that defaults to <span class='texttt'>less&lt;&gt;</span>.</p></div><div class='para' id='alg.sorting-2'><div class='marginalizedparent'><a class='marginalized' href='#alg.sorting-2'>2</a></div><p ><span class='texttt'>Comp</span>
 is a callable object (  ISO/IEC 14882:2014 &sect;<a href='../n4140/func.require'>[func.require]</a>). The return value of the <span class='texttt'>invoke</span> operation applied to
 an object of type <span class='texttt'>Comp</span>, when contextually converted to
@@ -8714,7 +8724,7 @@ is lexicographically less than the sequence of elements defined by the range
 otherwise.</p></div></div><div class='para' id='alg.lex.comparison-2'><div class='marginalizedparent'><a class='marginalized' href='#alg.lex.comparison-2'>2</a></div><div class='itemdescr'><p ><i>Complexity:</i>
 At most
 <span class='texttt'>2*min((last1 - first1), (last2 - first2))</span>
-applications of the corresponding comparison and projection.</p></div></div><div class='para' id='alg.lex.comparison-3'><div class='marginalizedparent'><a class='marginalized' href='#alg.lex.comparison-3'>3</a></div><div class='itemdescr'><p ><i>Remarks:</i>
+applications of the corresponding comparison and projections.</p></div></div><div class='para' id='alg.lex.comparison-3'><div class='marginalizedparent'><a class='marginalized' href='#alg.lex.comparison-3'>3</a></div><div class='itemdescr'><p ><i>Remarks:</i>
 If two sequences have the same number of elements and their corresponding
 elements are equivalent, then neither sequence is lexicographically
 less than the other.
