--- a/ranges-ts/defns.projection.html
+++ b/ranges-ts/defns.projection.html
@@ -1,9 +1,9 @@
-<!DOCTYPE html><html lang='en'><head><title>[defns.projection]</title><meta charset='UTF-8'/><link rel='stylesheet' type='text/css' href='14882.css'/></head><body><div class='wrapper'><h1 ><a class='secnum' style='min-width:73pt'>3</a> Terms and definitions <a class='abbr_ref' href='./#intro.defs'>[intro.defs]</a></h1><div id='defns.projection'><h2 ><a class='secnum' style='min-width:88pt'>3.1</a> projection <a class='abbr_ref'>[defns.projection]</a></h2><p >&langle;function object argument&rangle; used by an algorithm to examine the
-values of elements. This enables algorithms to behave based on the projected
-values rather than the actual element values.</p><p >[&nbsp;<i>Example:</i>
+<!DOCTYPE html><html lang='en'><head><title>[defns.projection]</title><meta charset='UTF-8'/><link rel='stylesheet' type='text/css' href='14882.css'/></head><body><div class='wrapper'><h1 ><a class='secnum' style='min-width:73pt'>3</a> Terms and definitions <a class='abbr_ref' href='./#intro.defs'>[intro.defs]</a></h1><div id='defns.projection'><h2 ><a class='secnum' style='min-width:88pt'>3.1</a> projection <a class='abbr_ref'>[defns.projection]</a></h2><p >&langle;function object argument&rangle; transformation which an algorithm applies
+before inspecting the values of elements</p><p >[&nbsp;<i>Example:</i>
 </p><pre class='codeblock'>
 std::pair&lt;int, const char*&gt; pairs[] = {{2, "foo"}, {1, "bar"}, {0, "baz"}};
 ranges::sort(pairs, std::less&lt;&gt;{}, [](auto const&amp; p) { return p.first; });
 </pre><p >sorts the pairs in increasing order of their <span class='texttt'>first</span> members:
 </p><pre class='codeblock'>
+{{0, "baz"}, {1, "bar"}, {2, "foo"}}
 </pre><p ><i>&nbsp;—&nbsp;end example</i>&nbsp;]</p></div></div></body></html>
