--- a/ranges-ts/diff.cpp.iteratortraits.html
+++ b/ranges-ts/diff.cpp.iteratortraits.html
@@ -5,4 +5,4 @@ are the three class templates <span class='texttt'>difference_type</span>, <span
 belong to separate concepts: <span class='texttt'>difference_type</span> belongs to <span class='texttt'>WeaklyIncrementable</span>;
 <span class='texttt'>value_type</span> belongs to <span class='texttt'>Readable</span>; and <span class='texttt'>iterator_category</span> belongs to
 <span class='texttt'>InputIterator</span>.</p></div><div class='para' id='2'><div class='marginalizedparent'><a class='marginalized' href='#2'>2</a></div><p >This breakage is intentional and inherent in the decomposition of the iterator concepts established
-by The Palo Alto report (<a href='intro.refs'>[intro.refs]</a>).</p></div></div></div></body></html>
+by the Palo Alto report (<span class='cite'>palo-alto</span>).</p></div></div></div></body></html>
