--- a/ranges-ts/acknowledgements.html
+++ b/ranges-ts/acknowledgements.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html><html lang='en'><head><title>[acknowledgements]</title><meta charset='UTF-8'/><link rel='stylesheet' type='text/css' href='14882.css'/></head><body><div class='wrapper'><div id='acknowledgements'><h1 ><a class='annexnum' style='min-width:73pt'>Annex B&emsp;(informative)</a> Acknowledgements <a class='abbr_ref' href='./#acknowledgements'>[acknowledgements]</a></h1><p >The design of this specification is based, in part, on a concept
 specification of the algorithms part of the C++ standard library, known
-as “The Palo Alto” report (<a href='intro.refs'>[intro.refs]</a>), which was developed by a large
+as the “Palo Alto report” (<span class='cite'>palo-alto</span>), which was developed by a large
 group of experts as a test of the expressive power of the idea of
 concepts.</p><p >The authors would like to thank Andrew Sutton for his work on the Concepts TS (<a href='intro.refs'>[intro.refs]</a>),
 for his help formalizing the ideas of the range-v3 library <span class='cite'>range-v3</span> on which this
