--- a/ranges-ts/diff.cpp.algo_return.html
+++ b/ranges-ts/diff.cpp.algo_return.html
@@ -6,4 +6,4 @@ algorithms return the iterator position of the end of the range. In many cases, 
 change. Some algorithms that return iterators in today's STL are changed to return pairs, and
 algorithms that return pairs today are changed to return tuples. This is likely to be the most
 noticeable breaking change.</p></div><div class='para' id='3'><div class='marginalizedparent'><a class='marginalized' href='#3'>3</a></div><p >Alternate designs that were less impactful were considered and dismissed. See Section 3.3.6 in
-N4128 (<a href='intro.refs'>[intro.refs]</a>) for a discussion of the issues.</p></div></div></div></body></html>
+N4128 (<span class='cite'>niebler2014</span>) for a discussion of the issues.</p></div></div></div></body></html>
