--- a/ranges-ts/intro.defs.html
+++ b/ranges-ts/intro.defs.html
@@ -1,10 +1,14 @@
-<!DOCTYPE html><html lang='en'><head><title>[intro.defs]</title><meta charset='UTF-8'/><link rel='stylesheet' type='text/css' href='14882.css'/></head><body><div class='wrapper'><div id='intro.defs'><h1 ><a class='secnum' style='min-width:73pt'>3</a> Terms and definitions <a class='abbr_ref' href='./#intro.defs'>[intro.defs]</a></h1><div class='para' id='1'><div class='marginalizedparent'><a class='marginalized' href='#1'>1</a></div><p >Terms defined in   ISO/IEC 14882:2014 &sect;<a href='../n4140/definitions'>[definitions]</a> are used in this document with the same
-meaning.</p><p ><span class='indexparent'><a class='index' id='projection'></a></span></p></div><div id='defns.projection'><h2 ><a class='secnum' href='#defns.projection' style='min-width:88pt'>3.1</a> projection <a class='abbr_ref' href='defns.projection'>[defns.projection]</a></h2><p >&langle;function object argument&rangle; used by an algorithm to examine the
-values of elements. This enables algorithms to behave based on the projected
-values rather than the actual element values.</p><p >[&nbsp;<i>Example:</i>
+<!DOCTYPE html><html lang='en'><head><title>[intro.defs]</title><meta charset='UTF-8'/><link rel='stylesheet' type='text/css' href='14882.css'/></head><body><div class='wrapper'><div id='intro.defs'><h1 ><a class='secnum' style='min-width:73pt'>3</a> Terms and definitions <a class='abbr_ref' href='./#intro.defs'>[intro.defs]</a></h1><p >For the purposes of this document, the terms and definitions given in
+ISO/IEC 14882:2014 and the following apply.</p><p >ISO and IEC maintain terminological databases for use in standardization at
+the following addresses:
+</p><ul class='itemize'><li ><p >IEC Electropedia: available at http://www.electropedia.org/
+</p></li><li ><p >ISO Online browsing platform: available at http://www.iso.org/obp
+</p></li></ul><p ><span class='indexparent'><a class='index' id='projection'></a></span></p><div id='defns.projection'><h2 ><a class='secnum' href='#defns.projection' style='min-width:88pt'>3.1</a> projection <a class='abbr_ref' href='defns.projection'>[defns.projection]</a></h2><p >&langle;function object argument&rangle; transformation which an algorithm applies
+before inspecting the values of elements</p><p >[&nbsp;<i>Example:</i>
 </p><pre class='codeblock'>
 std::pair&lt;int, const char*&gt; pairs[] = {{2, "foo"}, {1, "bar"}, {0, "baz"}};
 ranges::sort(pairs, std::less&lt;&gt;{}, [](auto const&amp; p) { return p.first; });
 </pre><p >sorts the pairs in increasing order of their <span class='texttt'>first</span> members:
 </p><pre class='codeblock'>
+{{0, "baz"}, {1, "bar"}, {2, "foo"}}
 </pre><p ><i>&nbsp;—&nbsp;end example</i>&nbsp;]</p></div></div></div></body></html>
