--- a/ranges-ts/intro.refs.html
+++ b/ranges-ts/intro.refs.html
@@ -3,7 +3,5 @@ all of their content constitutes requirements of this document. For dated
 references, only the edition cited applies. For undated references, the latest
 edition of the referenced document (including any amendments) applies.</p><ul class='itemize'><li id='1.1'><div class='marginalizedparent' style='left:-7em'><a class='marginalized' href='#1.1'>(1.1)</a></div><p >ISO/IEC 14882:2014, <i>Programming Languages - C++</i>
 </p></li><li id='1.2'><div class='marginalizedparent' style='left:-7em'><a class='marginalized' href='#1.2'>(1.2)</a></div><p >ISO/IEC TS 19217:2015, <i>Programming Languages - C++ Extensions for Concepts</i>
-</p></li><li id='1.3'><div class='marginalizedparent' style='left:-7em'><a class='marginalized' href='#1.3'>(1.3)</a></div><p >JTC1/SC22/WG21 N4128, <i>Ranges for the Standard Library, Revision 1</i>
-</p></li><li id='1.4'><div class='marginalizedparent' style='left:-7em'><a class='marginalized' href='#1.4'>(1.4)</a></div><p >JTC1/SC22/WG21 N3351, <i>A Concept Design for the STL</i>
-</p></li></ul><p >ISO/IEC 14882:2014 is herein called the <a class='hidden_link' href='#def:C++_Standard' id='def:C++_Standard'><i>C++ Standard</i></a>, N3351 is called the
-<a class='hidden_link' href='#def:“The_Palo_Alto”' id='def:“The_Palo_Alto”'><i>“The Palo Alto”</i></a> report, and ISO/IEC TS 19217:2015 is called the <a class='hidden_link' href='#def:Concepts_TS' id='def:Concepts_TS'><i>Concepts TS</i></a>.</p></div></div></div></body></html>
+</p></li></ul><p >ISO/IEC 14882:2014 is herein called the <a class='hidden_link' href='#def:C++_Standard' id='def:C++_Standard'><i>C++ Standard</i></a> and
+ISO/IEC TS 19217:2015 is called the <a class='hidden_link' href='#def:Concepts_TS' id='def:Concepts_TS'><i>Concepts TS</i></a>.</p></div></div></div></body></html>
