--- a/ranges-ts/stmt.ranged.html
+++ b/ranges-ts/stmt.ranged.html
@@ -36,7 +36,7 @@ the array bound. If <span class='removed'><span class='texttt'>_RangeT</span></s
 <span class='removed'>size</span><span class='added'>bound</span> or an array of incomplete type, the program is ill-formed;</p></li><li id='1.3.2'><div class='marginalizedparent' style='left:-9em'><a class='marginalized' href='#1.3.2'>(1.3.2)</a></div><p >if <span class='removed'><span class='texttt'>_RangeT</span></span><span class='added'>the <span class='grammarterm'>for-range-initializer</span></span> is
 <span class='removed'>a</span><span class='added'>an expression of</span> class type <span class='added'><span class='texttt'>C</span></span>, the
 <span class='grammarterm'>unqualified-ids</span> <span class='texttt'>begin</span> and <span class='texttt'>end</span> are looked up in
-the scope of <span class='removed'>class <span class='texttt'><span class='mbox'>_RangeT</span></span></span><span class='added'><span class='texttt'>C</span></span> as if by class
+the scope of <span class='removed'>class <span class='texttt'>_RangeT</span></span><span class='added'><span class='texttt'>C</span></span> as if by class
 member access lookup (<a href='../n4140/basic.lookup.classref'>[basic.lookup.classref]</a>), and if either
 (or both) finds at least one declaration, <span class='grammarterm'>begin-expr</span> and
 <span class='grammarterm'>end-expr</span> are <span class='texttt'>__range.begin()</span> and <span class='texttt'>__range.end()</span>,
