Update n3337/n4140 to fix range-based for

--- a/n3337/stmt.stmt.html
+++ b/n3337/stmt.stmt.html
@@ -240,6 +240,16 @@ int j = i;          <span class='comment'>// <span class='texttt'>j = 42</span>
 by parentheses<a class='footnotenum' href='#footnote-86'>86</a></p><pre class='bnf'><span class='terminal'>(</span> <i ><a href='expr.comma#nt:expression'>expression</a></i> <span class='terminal'>)</span></pre><p >and for a range-based <span class='texttt'>for</span> statement of the form</p><pre class='bnf'><span class='terminal'>for</span> <span class='terminal'>(</span> <i ><a href='stmt.iter#nt:for-range-declaration'>for-range-declaration</a></i> <span class='terminal'>:</span> <i ><a href='dcl.init#nt:braced-init-list'>braced-init-list</a></i> <span class='terminal'>)</span> <i ><a href='stmt.stmt#nt:statement'>statement</a></i></pre><p >let <i>range-init</i> be equivalent to the <i ><a href='dcl.init#nt:braced-init-list'>braced-init-list</a></i>. In each case, a
 range-based <span class='texttt'>for</span> statement
 is equivalent to</p><pre class='codeblock'>
+{
+  auto &amp;&amp; __range = range-init;
+  for ( auto __begin = begin-expr,
+             __end = end-expr;
+        __begin != __end;
+        ++__begin ) {
+    <i>for-range-declaration</i> = *__begin;
+    <i>statement</i>
+  }
+}
 </pre><p >where <span class='texttt'>__range</span>, <span class='texttt'>__begin</span>, and <span class='texttt'>__end</span> are variables defined for
 exposition only, and <span class='texttt'>_RangeT</span> is the type of the
 <i ><a href='expr.comma#nt:expression'>expression</a></i>, and <i>begin-expr</i> and <i>end-expr</i> are
